#266 Fixed height for hubzie on iPhones

--- a/packages/web/src/components/other/page_not_found.css
+++ b/packages/web/src/components/other/page_not_found.css
@@ -169,7 +169,7 @@
 
     .hubzie-UFO-image img {
         width: auto;
-        height: 35vh;
+        height: 29vh;
     }
     .page-not-found-logo p {
         font-size: 1.25rem;
